commons/redis.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis-pod
  labels:
    name: redis-pod
spec:
  containers:
    - image: marketplace.gcr.io/google/redis4
      name: redis
      volumeMounts:
        - name: redisdata
          mountPath: /data
          subPath: redisdata
  volumes:
    - name: redisdata
      persistentVolumeClaim:
        claimName: redisdata
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: redis-pod
  name: redis-service
spec:
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    name: redis-pod
  type: ClusterIP
