commons/add-headers-cache-leaderboard.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: player-default
spec:
  hosts:
    - "*"
  gateways:
    - explorer-gateway
  http:
    - match:
        - uri:
            prefix: /player/leaderboard
      headers:
        response:
          set:
            Cache-Control: "max-age=10, stale-while-revalidate=120, stale-if-error=360"
      route:
        - destination:
            host: player-service
            port:
              number: 8081
    - match:
        - uri:
            prefix: /player
      route:
        - destination:
            host: player-service
            port:
              number: 8081
