commons/circuit-breaker-event.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: event-service
spec:
  host: event-service
  trafficPolicy:
    connectionPool:
      http: {}
      tcp: {}
    loadBalancer:
      consistentHash:
        httpHeaderName: user
